Refactor other food controllers